--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl_phone_field: ^3.0.1
   image_cropper: ^8.0.1
   provider: ^6.1.2
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
