--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   google_nav_bar: ^5.0.6
+  google_fonts: ^6.2.1
+  flutter_layout_grid: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
