--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   google_nav_bar: ^5.0.6
   google_fonts: ^6.2.1
   flutter_layout_grid: ^2.0.7
+  video_player: ^2.9.1
+  cached_network_image: ^3.4.1
+  youtube_player_flutter: ^9.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
