--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,15 @@ dependencies:
   image_cropper: ^8.0.1
   provider: ^6.1.2
   intl: ^0.19.0
-  google_nav_bar: ^5.0.6
   google_fonts: ^6.2.1
   flutter_layout_grid: ^2.0.7
   video_player: ^2.9.1
-  cached_network_image: ^3.4.1
   youtube_player_flutter: ^9.0.3
+  file_picker: ^8.1.2
+  open_file: ^3.3.2
+  http: ^1.2.2
+  uuid: ^4.4.2
+  shared_preferences: ^2.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
