--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   http: ^1.2.2
   uuid: ^4.4.2
   shared_preferences: ^2.3.2
+  shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
+  percent_indicator: ^4.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
