--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shimmer: ^3.0.0
   cached_network_image: ^3.4.1
   percent_indicator: ^4.2.3
+  carousel_slider: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
